# meson-patch-files

boost_1_76_0/: meson.build
boost_1_78_0/: meson.build
boost_mysql/: meson.build
cryptopp-8.5.0/: meson.build
fmt-8.0.1/: meson.build
mysql-0.2.0/: meson.build
sol2-3.2.3/: meson.build
wraps/: boost.wrap  cryptopp.wrap  cxxopts.wrap  fmt.wrap  lua.wrap  magic_enum.wrap  mysql.wrap  nlohmann_json.wrap  range-v3.wrap  sol2.wrap
